# perfume-pardner-api

./: .env  .gitignore  Cargo.toml  Dockerfile  Program.cs  README.md  WeatherForecast.cs  appsettings.Development.json  appsettings.json  docker-compose-build.yml  docker-compose-test.yml  docker-compose.yml  output.json  perfume-pardner-api.csproj  perfume-pardner-api.http  perfume-pardner-api.sln  repopack-output.txt
.sqlx/: query-004c5469fc3cd46e4692902edc0757af45f526b4e764dc73e1c321ca53d27488.json  query-033aa85ade6f463c4f78c825bd75b834af5ef7b89c76d79a6ffd32b551c21336.json  query-29e3e356fe0059b7e22d03bce95aac026211899d9884a1075f27a3250b0751f3.json  query-40a5999ab321897d38b0b7bd0881956674e439116ed40c9add77ce7c40b5d5b8.json  query-4250bac5bcefd9674baef31b7c2d1186491da7eed20de62ceafbd7062f39da62.json  query-6226aa2f6cca0d85e62f05daf5b6eab3ff7714ea77302e054ad2243cf70986ff.json  query-ab4672f0cfeafa3eb9a23911225684891fcc5679fa73ac8521c61d82de095c23.json  query-c831d48fbbcdf9582204434e61eeecabb133db20aed7eb9c5fc999c3fe6acc67.json  query-d8d1f8ebfed5f7f4fa7706b05bc91d5ab6dfd269b4953dae3c8b970c422b514a.json  query-d8e473a273ee0ebba0d69fd2f733e8fdcb482e9beb507f9268f2e75eeec97a25.json  query-d905c1c52a2013bce999d03c9622cd0a9eeac72af793612e03ee56d94f637dfa.json
Controllers/: WeatherForecastController.cs
Properties/: launchSettings.json
migrations/: 20240430090034_create_perfume_table.sql  20240507044155_rename_perfume_table.sql  20240507044232_user_table.sql  20240507222649_add_constraints_to_user_account_table.sql
src/: db.rs  main.rs
tests/: fragrance.rs  user.rs
(+25 files in other folders)
