[package]
name = "perfume-pardner-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
futures = "0.3.30"
once_cell = "1.19.0"
serde = "1.0.199"
serde_json = "1.0.116"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }

[profile.dev.package.sqlx-macros]
opt-level = 3
